[package]
name = "forest-explorer"
version = "0.1.0"
edition = "2021"
authors = ["Forest Team <forest@chainsafe.io>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
fvm_shared = { version = "4.4" }
worker = { version = "0.4", features = ['http', 'axum'], optional = true }
worker-macros = { version = "0.4", features = ['http'], optional = true }
tower-service = "0.3"
console_error_panic_hook = { version = "0.1" }
leptos = "0.6"
axum = { version = "0.7", default-features = false, optional = true }
tower = { version = "0.5", optional = true }
http = { version = "1", optional = true }
leptos_axum = { version = "0.6", default-features = false, optional = true }
leptos_meta = "0.6"
leptos_router = "0.6"
wasm-bindgen = "0.2"
console_log = "1"
log = "0.4"
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1"
bls-signatures = "0.15.0"
libsecp256k1 = "0.7.1"
anyhow = "1.0.93"
serde = "1.0.215"
hex = "0.4.3"
base64 = "0.22.1"
blake2b_simd = "1.0.2"
fvm_ipld_encoding = "0.4.0"
cid = "0.10.1"
serde_tuple = "1.0.0"
derive_more = { version = "1.0.0", features = ["from", "into"] }
num-traits = "0.2.19"
leptos-use = "0.13.7"
chrono = "0.4.38"
send_wrapper = "0.6.0"

[features]
hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate"]
ssr = [
  "dep:tower",
  "dep:http",
  "dep:axum",
  "leptos/ssr",
  "leptos_axum/wasm",
  "leptos_meta/ssr",
  "leptos_router/ssr",
  "dep:worker",
  "dep:worker-macros",
]

[profile.release]
lto = true
opt-level = 's'
