[package]
name = "forest-explorer"
version = "0.1.0"
edition = "2024"
authors = ["Forest Team <forest@chainsafe.io>"]
description = "Serverless Filecoin Explorer with faucet capabilities"
repository = "https://github.com/ChainSafe/forest-explorer"
license = "Apache-2.0 OR MIT"
resolver = "3"

[lib]
crate-type = ["cdylib"]

[dependencies]
alloy = "1"
anyhow = "1"
async-trait = "0.1"
axum = { version = "0.8", default-features = false, optional = true }
base64 = "0.22"
blake2b_simd = "1"
bls-signatures = "0.15"
chrono = "0.4"
cid = "0.11"
console_error_panic_hook = { version = "0.1" }
console_log = "1"
derive_more = { version = "2", features = ["from", "into", "display"] }
fvm_ipld_encoding = "0.5"
fvm_shared = { version = "~4.7" }
hex = "0.4"
http = { version = "1", optional = true }
leptos = "0.8"
leptos-use = "0.17"
leptos_axum = { version = "0.8", default-features = false, optional = true }
leptos_meta = "0.8"
leptos_router = "0.8"
libsecp256k1 = "0.7"
log = "0.4"
multihash-codetable = "0.1.4"
num-traits = "0.2"
reqwest = { version = "0.12", features = ["json"] }
send_wrapper = "0.6"
serde = "1"
serde_json = "1"
serde_tuple = "1"
strum = { version = "0.27", features = ["derive"] }
thiserror = "2"
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", features = ["cors"], optional = true }
tower-service = "0.3"
url = { version = "2" }
uuid = { version = "1", features = ["v4", "js"] }
wasm-bindgen = "0.2"
worker = { version = "0.7", features = ['http', 'axum'], optional = true }
worker-macros = { version = "0.7", features = ['http'], optional = true }

[dev-dependencies]
mockall = "0.14"
rusty-fork = "0.3"
tokio = { version = "1", features = ["macros", "rt"] }

[target.'cfg(target_family="wasm")'.dependencies]
getrandom0_2 = { package = "getrandom", version = "0.2", features = ["js"] }
getrandom0_3 = { package = "getrandom", version = "0.3", features = ["wasm_js"] }

[features]
hydrate = ["leptos/hydrate"]
ssr = [
  "dep:tower",
  "dep:tower-http",
  "dep:http",
  "dep:axum",
  "leptos/ssr",
  "leptos_axum/wasm",
  "leptos_meta/ssr",
  "leptos_router/ssr",
  "dep:worker",
  "dep:worker-macros",
]

# https://doc.rust-lang.org/stable/cargo/guide/build-performance.html#reduce-amount-of-generated-debug-information
[profile.dev]
debug = "line-tables-only"

# Avoid generating any debug information for dependencies
[profile.dev.package."*"]
debug = false

[profile.release]
lto = true
opt-level = 's'
